<resources>
    <string name="app_name">Fragment_Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="number">number</string>
    <string name="increment">increment</string>
    <string name="reset">Reset</string>
    <string name="decrement">Decerement</string>
    <string name="blue">Bule</string>
</resources>