<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Lifecycle_Fragment"
    android:id="@+id/llfragment"
    android:orientation="horizontal"
    android:gravity="center">

    <Button
        android:id="@+id/btnincrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/increment"
        android:textSize="15sp"
        />
    <Button
        android:id="@+id/btnreset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:textSize="15sp"/>
    <Button
        android:id="@+id/btndec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrement"
        android:textSize="15sp"/>



</LinearLayout>